[tool.poetry]
name = "extranet-cnll"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@abilian.com>"]

[tool.poetry.dependencies]
python = "^3.9"
abilian-sbe-next = {git = "https://github.com/abilian/abilian-sbe-monorepo", branch = "flask2" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
